--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <section id="home" class="landing-page">
         <div class="landing-content">
-            <h1>Welcome to the world of magic</h1>
+            <h1>Welcome !</h1>
             <p>Face-Recognition system to recognize the the users face and display the details of that person</p>
             <button class="explore-btn">Explore More</button>
         </div>
